--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						</button>
 						<a class="logo" href="index.html">
 							<img class="logo-dark" src="assets/images/logo/logo-dark.png" alt="appy Logo">
-							<img class="logo-light" src="assets/images/logo/logo-light.png" alt="appy Logo">
+							<img class="logo-light" src="assets/images/logo/logo-light.svg" alt="appy Logo">
 						</a>
 					</div>
 					<div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
@@ -60,8 +60,6 @@
 							<li class="active"><a data-scroll="scrollTo" href="#slider">home</a>
 							</li>
 							<li><a data-scroll="scrollTo" href="#feature2">feature</a>
-							</li>
-							<li><a data-scroll="scrollTo" href="#video">video</a>
 							</li>
 							<li><a data-scroll="scrollTo" href="#screenshots">screenshots</a>
 							</li>
@@ -80,9 +78,9 @@
 		============================================= -->
 		<section id="slider" class="section slider slider-2">
 			<div class="slide--item bg-theme">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12">
+				<div class="container" style="background-color: #084f49;">
+					<div class="row" style="background-color: #084f49;">
+						<div class=" col-xs-12 col-sm-12 col-md-12">
 							<div class="slide--logo mt-100 hidden-xs wow fadeInUp" data-wow-duration="1s">
 								<img src="assets/images/logo/logo-light.png" alt="logo hero">
 							</div>
@@ -225,111 +223,15 @@
 		</section>
 		<!-- #feature2 end -->
 
-		<!-- Feature #3
-		============================================= -->
-		<section id="feature3" class="section feature feature-left feature-left-circle">
-			<div class="container">
-				<div class="row clearfix">
-					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
-						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title">使い方</h2>
-						</div>
-					</div>
-					<!-- .col-md-6 end -->
-				</div>
-				<!-- .row end -->
-				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12">
-						<div class="center-block text-center mb-100 wow fadeInUp" data-wow-duration="1s">
-							<img src="assets/images/mockup/iphone.png" alt="screenshots">
-						</div>
-					</div>
-				</div>
-				<!-- .row end -->
-				<div class="row">
-					<!-- Panel #1 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								1
-							</div>
-							<div class="feature--content">
-								<h3>Download appy</h3>
-								<p>After all, as described in Web Design Trends 2015 & 2016, vision.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
-
-					<!-- Panel #2 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								2
-							</div>
-							<div class="feature--content">
-								<h3>Install & sign up</h3>
-								<p>Rounding up a bunch of specific designs and talking about the merits.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
-
-					<!-- Panel #3 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								3
-							</div>
-							<div class="feature--content">
-								<h3>Upload your images</h3>
-								<p>At its core, every brand has something special to reveal something.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
-				</div>
-				<!-- .row end -->
-			</div>
-			<!-- .container end -->
-		</section>
-		<!-- #feature3 end -->
-
-		<!-- Video
-		============================================= -->
-		<section id="video" class="section video bg-theme bg-parallex">
-			<div class="container">
-				<div class="row clearfix">
-					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
-						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title text-white">プロモーション</h2>
-						</div>
-					</div>
-					<!-- .col-md-6 end -->
-				</div>
-				<!-- .row end -->
-				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12 text-center wow fadeInUp" data-wow-duration="1s">
-						<div class="video-ipad-holder">
-							<iframe src="https://player.vimeo.com/video/58363288?color=ffffff&title=0&byline=0&portrait=0"></iframe>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- #video end -->
 
 		<!-- Screenshots
         ============================================= -->
-		<section id="screenshots" class="section screenshots">
-			<div class="container">
-				<div class="row clearfix">
+		<section id="screenshots" class="section screenshots" 　style="background-color: #084f49;">
+			<div class="container" style="background-color: #084f49;">
+				<div class="row clearfix" 　style="background-color: #084f49;">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title">Screenshots</h2>
+							<h2 class="heading--title" style="color: #ffffff;">Screenshots</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -340,32 +242,27 @@
 						<div class="carousel" data-slide="4" data-slide-res="2" data-autoplay="true" data-nav="false" data-dots="false" data-space="30" data-loop="true" data-speed="1000">
 							<!-- screenshot #1 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/1.jpg" alt="client">
+								<img class="center-block" src="assets/images/screenshots/1.png" alt="client">
 							</div>
 
 							<!-- screenshot #2 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/2.jpg" alt="client">
+								<img class="center-block" src="assets/images/screenshots/3.png" alt="client">
 							</div>
 
 							<!-- screenshot #3 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/3.jpg" alt="client">
+								<img class="center-block" src="assets/images/screenshots/6.png" alt="client">
 							</div>
 
 							<!-- screenshot #4 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/4.jpg" alt="client">
+								<img class="center-block" src="assets/images/screenshots/5.png" alt="client">
 							</div>
 
 							<!-- screenshot #5 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/3.jpg" alt="clclientient">
-							</div>
-
-							<!-- screenshot #6 -->
-							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/2.jpg" alt="screenshot">
+								<img class="center-block" src="assets/images/screenshots/2.png" alt="clclientient">
 							</div>
 						</div>
 					</div>
@@ -400,7 +297,7 @@
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>Mark Smith</h5>
+										<h5>20代　男性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
@@ -422,7 +319,7 @@
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>Jessy Arthur</h5>
+										<h5>30代 女性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
@@ -444,7 +341,7 @@
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>Nicole Jonson</h5>
+										<h5>40代 男性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
