--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 						</button>
 						<a class="logo" href="index.html">
 							<img class="logo-dark" src="assets/images/logo/logo-dark.png" alt="appy Logo">
-							<img class="logo-light" src="assets/images/logo/logo-light.svg" alt="appy Logo">
+							<img class="logo-light" src="assets/images/logo/logo-light.png" alt="appy Logo">
 						</a>
 					</div>
 					<div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
 						<ul class="nav navbar-nav nav-pos-right navbar-left nav-split">
-							<li class="active"><a data-scroll="scrollTo" href="#slider">home</a>
+							<li class="active"><a data-scroll="scrollTo" href="#slider">ホーム</a>
 							</li>
-							<li><a data-scroll="scrollTo" href="#feature2">feature</a>
+							<li><a data-scroll="scrollTo" href="#feature2">特徴</a>
 							</li>
-							<li><a data-scroll="scrollTo" href="#screenshots">screenshots</a>
+							<li><a data-scroll="scrollTo" href="#screenshots">画面</a>
 							</li>
-							<li><a data-scroll="scrollTo" href="#reviews">reviews</a>
+							<li><a data-scroll="scrollTo" href="#reviews">レビュー</a>
 							</li>
-							<li><a data-scroll="scrollTo" href="#cta">download</a>
+							<li><a data-scroll="scrollTo" href="#cta">ダウンロード</a>
 							</li>
 						</ul>
 					</div>
@@ -89,7 +89,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 pt-100 wow fadeInUp" data-wow-duration="1s">
 							<div class="slide--headline">
-								<h1>知らない間に運動する</h1>
+								<h1>好きなもののために運動する</h1>
 							</div>
 							<div class="slide--bio">本を聴きながら、一緒に運動もしてみませんか？</div>
 							<div class="slide--action cta">
@@ -132,8 +132,8 @@
 								<i class="lnr lnr-users"></i>
 							</div>
 							<div class="feature--content">
-								<h3>Stay Connected</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
+								<h3>簡単購入</h3>
+								<p>気軽に一冊から本を購入できます！！</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -147,8 +147,8 @@
 								<i class="lnr lnr-cog"></i>
 							</div>
 							<div class="feature--content">
-								<h3>Easy Unlock</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
+								<h3>運動</h3>
+								<p>運動をすればするほど本がお得に！</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -162,8 +162,8 @@
 								<i class="lnr lnr-lock"></i>
 							</div>
 							<div class="feature--content">
-								<h3>Secure Data</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
+								<h3>運動の継続</h3>
+								<p>目標歩数が毎日通知で来るので、継続して運動ができます！</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -171,53 +171,7 @@
 					<!-- .col-md-4 end -->
 				</div>
 				<!-- .row end -->
-				<div class="row">
-					<!-- Panel #4 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								<i class="lnr lnr-clock"></i>
-							</div>
-							<div class="feature--content">
-								<h3>Save Your Time</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
 
-					<!-- Panel #5 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								<i class="lnr lnr-star"></i>
-							</div>
-							<div class="feature--content">
-								<h3>High Rating</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
-
-					<!-- Panel #6 -->
-					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
-							<div class="feature--icon">
-								<i class="lnr lnr-bug"></i>
-							</div>
-							<div class="feature--content">
-								<h3>Free Updates</h3>
-								<p>Appy impresses you with fully responsiveness and highly customization. We did it in combination of very clean and flexible design.</p>
-							</div>
-						</div>
-						<!-- .feature-panel end -->
-					</div>
-					<!-- .col-md-4 end -->
-				</div>
-				<!-- .row end -->
 			</div>
 			<!-- .container end -->
 		</section>
@@ -228,10 +182,10 @@
         ============================================= -->
 		<section id="screenshots" class="section screenshots" 　style="background-color: #084f49;">
 			<div class="container" style="background-color: #084f49;">
-				<div class="row clearfix" 　style="background-color: #084f49;">
+				<div class="row clearfix" style="background-color: #084f49;">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title" style="color: #ffffff;">Screenshots</h2>
+							<h2 class="heading--title" style="color: #ffffff;">実際の画面</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -293,7 +247,7 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>We have worked with appify.As we have grown and evolved, appfiy has created all of our profit.What I value most about our relationship is that appfiy knows us and our business.</p>
+									<p>忙しくて本が読めない間に歩きながら本が読めると知りました。今は毎日使っています。</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
@@ -315,7 +269,7 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>We have worked with appify.As we have grown and evolved, appfiy has created all of our profit.What I value most about our relationship is that appfiy knows us and our business.</p>
+									<p>ビジネス本から勉強できるような本に出会えました。スキマ時間に使えるので使っています</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
@@ -337,7 +291,8 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>We have worked with appify.As we have grown and evolved, appfiy has created all of our profit.What I value most about our relationship is that appfiy knows us and our business.</p>
+									<p>他のオーディオブックとは違い、無料で聴けて満足です。
+										自然と歩く距離が増えるので自分の健康にも繋がっています</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
@@ -363,12 +318,12 @@
 
 		<!-- CTA #1
 		============================================= -->
-		<section id="cta" class="section cta text-center pb-0">
+		<section id="cta" class="section cta text-center pb-0" style="background-color: #084f49;">
 			<div class="container">
 				<div class="row clearfix">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-50 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title">Download & install appy now</h2>
+							<h2 class="heading--title" style="color: white;">今すぐダウンロード！</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -390,40 +345,6 @@
 			<!-- .container end -->
 		</section>
 		<!-- #cta1 end -->
-
-		<!-- Newsletter #1
-		============================================= -->
-		<section id="newsletter" class="section newsletter text-center bg-theme">
-			<div class="container">
-				<div class="row clearfix">
-					<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title text-white">Subscribe to get updates</h2>
-							<p class="heading--desc text-white">we shows only the best websites, portfolios ans landing pages built completely with passion, simplicity & creativity !</p>
-						</div>
-					</div>
-					<!-- .col-md-6 end -->
-				</div>
-				<!-- .row end -->
-				<div class="row">
-					<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-						<form class="mb-0 form-action wow fadeInUp" data-wow-duration="1s">
-							<div class="input-group">
-								<input type="email" class="form-control" placeholder="E-mail address">
-								<span class="input-group-btn">
-									<input type="submit" class="btn btn--primary" value="Subscribe" name="submit">
-								</span>
-							</div>
-							<!-- .input-group end -->
-						</form>
-					</div>
-					<!-- .col-md-12 end -->
-				</div>
-				<!-- .row end -->
-			</div>
-			<!-- .container end -->
-		</section>
-		<!-- #newsletter end -->
 
 		<!-- Footer #5
 		============================================= -->
