--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<!-- Fonts
     ============================================= -->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i,800,800' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
 
 	<!-- Stylesheets
     ============================================= -->
@@ -89,9 +92,10 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 pt-100 wow fadeInUp" data-wow-duration="1s">
 							<div class="slide--headline">
-								<h1>好きなもののために運動する</h1>
+								<h1 style="font-family: 'Kosugi Maru', sans-serif;">運動でお得に本が買える<br>
+									新しいオーディオブック</h1>
 							</div>
-							<div class="slide--bio">本を聴きながら、一緒に運動もしてみませんか？</div>
+							<div class="slide--bio" style="font-family: 'Kosugi Maru', sans-serif;">本を聴きながら、一緒に運動もしてみませんか？</div>
 							<div class="slide--action cta">
 								<a class="btn-hover" href="#"><img src="assets/images/appstore.png" alt="download appstore"></a>
 								<a class="btn-hover" href="#"><img src="assets/images/playstore.png" alt="download playstore"></a>
@@ -118,7 +122,7 @@
 				<div class="row clearfix">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-80 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title">アプリの特徴</h2>
+							<h2 class="heading--title" style="font-family: 'Kosugi Maru', sans-serif;">アプリの特徴</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -129,11 +133,11 @@
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="feature--icon">
-								<i class="lnr lnr-users"></i>
+								<i class="lnr lnr-book"></i>
 							</div>
 							<div class="feature--content">
-								<h3>簡単購入</h3>
-								<p>気軽に一冊から本を購入できます！！</p>
+								<h3 style="font-family: 'Kosugi Maru', sans-serif;">簡単購入</h3>
+								<p style="font-family: 'Kosugi Maru', sans-serif;">気軽に一冊から本を購入できます！<br>好きな本をたくさんよみましょう</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -144,11 +148,11 @@
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="feature--icon">
-								<i class="lnr lnr-cog"></i>
+								<i class="fas fa-running"></i>
 							</div>
 							<div class="feature--content">
-								<h3>運動</h3>
-								<p>運動をすればするほど本がお得に！</p>
+								<h3 style="font-family: 'Kosugi Maru', sans-serif;">運動</h3>
+								<p style="font-family: 'Kosugi Maru', sans-serif;">運動をすればするほど本がお得に！<br>運動しただけ、本がお得に購入できます。</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -159,11 +163,11 @@
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="feature-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="feature--icon">
-								<i class="lnr lnr-lock"></i>
+								<i class="far fa-bell"></i>
 							</div>
 							<div class="feature--content">
-								<h3>運動の継続</h3>
-								<p>目標歩数が毎日通知で来るので、継続して運動ができます！</p>
+								<h3 style="font-family: 'Kosugi Maru', sans-serif;">継続</h3>
+								<p style="font-family: 'Kosugi Maru', sans-serif;">目標歩数が毎日通知で来るので<br>継続して運動ができます！</p>
 							</div>
 						</div>
 						<!-- .feature-panel end -->
@@ -185,7 +189,7 @@
 				<div class="row clearfix" style="background-color: #084f49;">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title" style="color: #ffffff;">実際の画面</h2>
+							<h2 class="heading--title" style="color: #ffffff; font-family: 'Kosugi Maru', sans-serif;">実際の画面</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -235,7 +239,7 @@
 				<div class="row clearfix">
 					<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title">お客様からのレビュー</h2>
+							<h2 class="heading--title" style="font-family: 'Kosugi Maru', sans-serif;">お客様からのレビュー</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -247,11 +251,11 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>忙しくて本が読めない間に歩きながら本が読めると知りました。今は毎日使っています。</p>
+									<p style="font-family: 'Kosugi Maru', sans-serif;">忙しくて本が読めない間に歩きながら本が読めると知りました。今は毎日使っています。</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>20代　男性</h5>
+										<h5 style="font-family: 'Kosugi Maru', sans-serif;">20代　男性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
@@ -269,11 +273,11 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>ビジネス本から勉強できるような本に出会えました。スキマ時間に使えるので使っています</p>
+									<p style="font-family: 'Kosugi Maru', sans-serif;">ビジネス本から勉強できるような本に出会えました。スキマ時間に使えるので使っています</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>30代 女性</h5>
+										<h5 style="font-family: 'Kosugi Maru', sans-serif;">30代 女性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
@@ -291,12 +295,12 @@
 						<div class="testimonial-panel wow fadeInUp" data-wow-duration="1s">
 							<div class="testimonial-body">
 								<div class="testimonial--body">
-									<p>他のオーディオブックとは違い、無料で聴けて満足です。
+									<p style="font-family: 'Kosugi Maru', sans-serif;">他のオーディオブックとは違い、本を読むためのモチベーションが上がりました。
 										自然と歩く距離が増えるので自分の健康にも繋がっています</p>
 								</div>
 								<div class="testimonial--meta">
 									<div class="testimonial--author pull-left">
-										<h5>40代 男性</h5>
+										<h5 style="font-family: 'Kosugi Maru', sans-serif;">40代 男性</h5>
 									</div>
 									<div class="testimonial--rating pull-right">
 										<i class=" fa fa-star"></i>
@@ -323,7 +327,7 @@
 				<div class="row clearfix">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-50 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title" style="color: white;">今すぐダウンロード！</h2>
+							<h2 class="heading--title" style="color: white; font-family: 'Kosugi Maru', sans-serif;">今すぐダウンロード！</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
