--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<a class="btn-hover" href="#"><img src="assets/images/playstore.png" alt="download playstore"></a>
 							</div>
 						</div>
-						<div class="slide--holder">
+						<div class="slide--holder" style="margin-top: -30%;">
 							<img class="img-responsive pull-right" src="assets/images/mockup/iphone-2.png" alt="screens">
 						</div>
 					</div>
@@ -185,11 +185,11 @@
 		<!-- Screenshots
         ============================================= -->
 		<section id="screenshots" class="section screenshots" 　style="background-color: #084f49;">
-			<div class="container" style="background-color: #084f49;">
-				<div class="row clearfix" style="background-color: #084f49;">
+			<div class="container">
+				<div class="row clearfix">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 						<div class="heading heading-1 mb-60 text--center wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title" style="color: #ffffff; font-family: 'Kosugi Maru', sans-serif;">実際の画面</h2>
+							<h2 class="heading--title" style="color: #ffffff; font-family: 'Kosugi Maru', sans-serif; color: #084f49;">実際の画面</h2>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -200,17 +200,17 @@
 						<div class="carousel" data-slide="4" data-slide-res="2" data-autoplay="true" data-nav="false" data-dots="false" data-space="30" data-loop="true" data-speed="1000">
 							<!-- screenshot #1 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/1.png" alt="client">
+								<img class="center-block" src="assets/images/screenshots/4.png" alt="client">
 							</div>
 
 							<!-- screenshot #2 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/3.png" alt="client">
+								<img class="center-block" src="assets/images/screenshots/2.png" alt="client">
 							</div>
 
 							<!-- screenshot #3 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/6.png" alt="client">
+								<img class="center-block" src="assets/images/screenshots/3.png" alt="client">
 							</div>
 
 							<!-- screenshot #4 -->
@@ -220,7 +220,7 @@
 
 							<!-- screenshot #5 -->
 							<div class="screenshot">
-								<img class="center-block" src="assets/images/screenshots/2.png" alt="clclientient">
+								<img class="center-block" src="assets/images/screenshots/1.png" alt="clclientient">
 							</div>
 						</div>
 					</div>
@@ -337,11 +337,6 @@
 					<div class="col-xs-12 col-sm-12 col-md-12 mb-100 wow fadeInUp" data-wow-duration="1s">
 						<a class="btn-hover" href="#"><img src="assets/images/appstore.png" alt="download appstore"></a>
 						<a class="btn-hover" href="#"><img src="assets/images/playstore.png" alt="download playstore"></a>
-					</div>
-					<!-- .col-md-12 end -->
-					<div class="col-xs-12 col-sm-12 col-md-12 wow fadeInUp" data-wow-duration="1s">
-						<img src="assets/images/mockup/2-layers.png" alt="mockup" />
-						<!-- .col-md-12 end -->
 					</div>
 				</div>
 				<!-- .row end -->
